# Slate

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  SLATE_MANAGER.md  build.rs  docs.json  example.slate.toml  install.sh
.github/workflows/: ci.yml  release.yml
dotfiles/ghostty/: config
dotfiles/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
dotfiles/mako/: config
dotfiles/rofi/: config.rasi
dotfiles/waybar/: style.css
dotfiles/wlogout/: style.css
dotfiles/zsh/: .zprofile  .zshrc
scripts/: airdrop.sh  deploy_forge.sh
shell/: Bar.qml  CommandCenter.qml  Config.qml  Dock.qml  Launcher.qml  qmldir  shell.qml
shell/components/: DashboardToggle.qml  SliderRow.qml
shell/config/: Config.qml
shell/modules/: Clock.qml  Dashboard.qml  Notch.qml  NotificationPopup.qml  SystemStats.qml  WorkspaceTracker.qml  qmldir
shell/scripts/: keystore.py  lockwall.py  loginlock.sh  sleep_monitor.sh  thumbgen.py  weather.sh  wf-record.sh
shell/services/: Audio.qml  Brightness.qml  Network.qml  Notifications.qml  qmldir
src/: color.rs  config.rs  installer.rs  main.rs  preflight.rs  system.rs  template.rs  tui.rs
src/commands/: check.rs  chroot_stage.rs  forge.rs  init.rs  install.rs  mod.rs  reload.rs  repair.rs  set.rs  wall.rs
system/: limine.conf  mkinitcpio.conf
system/mono-steel/: mono-steel.plymouth  mono-steel.script
templates/: limine.conf
templates/ghostty/: config
templates/gtk-3.0/: settings.ini
templates/gtk-4.0/: settings.ini
templates/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
templates/mako/: config
(+72 files in other folders)
