[package]
name = "slate"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tera = "1.20"
anyhow = "1.0"
home = "0.5"
regex = "1.10"
serde_json = "1.0.149"
shellexpand = "3.1.1"
nix = { version = "0.31.1", features = ["user"] }
tokio = "1.49.0"
rpassword = "7.4.0"
