[package]
name = "slate"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
nix = { version = "0.31.1", features = ["user"] }
tokio = "1.49.0"
rpassword = "7.4.0"
serde_json = "1.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
